<resources>
    <string name="app_name">Pathfinder Toolkit</string>
    <string name="title_activity_main_menu">Pathfinder Toolkit</string>
    <string name="title_activity_ability_calc">Pointbuy Calculator</string>
    <string name="title_activity_initiative_tracker">Initiative Tracker</string>
    <string name="title_activity_skill_checker">Party Skill Checker</string>
    <string name="title_fragment_encounters">Encounters</string>
    <string name="title_activity_party_manager">Party Manager</string>
    <string name="title_activity_party_member_editor">Party Member Editor</string>
    <string name="title_activity_settings">Settings</string>
    <string name="confirm_exit_dialog_title">Confirm Exit</string>
    <string name="confirm_exit_dialog_message">Do you want to close Pathfinder Toolkit?</string>
    <string name="updating_dialog_message">Updating…</string>
    <string name="main_menu_icons_description">Icon for main menu item</string>
    <string name="shared_menu_settings">Settings</string>
    <string name="about_app_version">Version:</string>
    <string name="about_company_name">Lateensoft development group</string>
    <string name="about_feedback">If you have any feedback for us, or encounter any bugs in this app, please email us at info@lateensoft.host56.com</string>
    <string name="about_ogl_link"><a href="http://paizo.com/pathfinderRPG/prd/openGameLicense.html">Paizo Publishing, LLC Community Use Policy and Open Game License 1.0a</a></string>
    <string name="about_community_use_header">Community Use Notice</string>
    <string name="about_community_use_clause">This application uses trademarks and/or copyrights owned by Paizo Publishing, LLC, which are used under Paizo\'s Community Use Policy. We are expressly prohibited from charging you to use or access this content. This application is not published, endorsed, or specifically approved by Paizo Publishing. For more information about Paizo\'s Community Use Policy, please visit paizo.com/communityuse. For more information about Paizo Publishing and Paizo products, please visit paizo.com.</string>
    <string name="main_menu_character_group">Characters</string>
    <string name="main_menu_init_tracker">Initiative Tracker</string>
    <string name="main_menu_party_skill_checker">Party Skill Checker</string>
    <string name="main_menu_encounters">Encounters</string>
    <string name="main_menu_party_manager">Party Manager</string>
    <string name="main_menu_pointbuy">Pointbuy Calculator</string>
    <string name="main_menu_dice_roller">Dice Roller</string>
    <string name="rate_dialog_title">Please rate our app!</string>
    <string name="rate_dialog_message">You rolled a 1 on your Rate Popup saving throw! Rate now to get a +5 cloak of ad avoidance. You can keep it until it slips back into the astral plane on the next update.</string>
    <string name="rate_dialog_positive_button">Rate</string>
    <string name="rate_dialog_negative_button">Later</string>
    <string name="pref_about_screen_title">About Pathfinder Toolkit</string>
    <string name="title_activity_about">About</string>
    <string name="delete_button_text">Delete</string>
    <string name="ok_button_text">OK</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="error_alert_title">Error</string>
    <string name="tab_character_inventory">Inventory</string>
    <string name="tab_character_weapons">Weapons</string>
    <string name="tab_character_armor">Armor</string>
    <string name="tab_character_feats">Feats / S.A.</string>
    <string name="tab_character_skills">Skills</string>
    <string name="tab_character_abilities">Abilities</string>
    <string name="tab_character_fluff">Fluff</string>
    <string name="tab_character_spells">Spells</string>
    <string name="tab_character_combat_stats">Combat Stats</string>
    <string name="tab_character_membership">Party Membership</string>
    <string name="menu_item_character_list">Characters</string>
    <string name="menu_item_new_character">New Character</string>
    <string name="menu_item_delete_character">Delete Character</string>
    <string name="menu_item_export_character">Export Character</string>
    <string name="menu_item_export_all">Export All</string>
    <string name="menu_item_import_character">Import Character(s)</string>
	<string name="select_character_dialog_header">Select Character</string>
	<string name="new_character_dialog_message">Create new character?</string>
	<string name="confirm_delete_item_message">Are you sure you want to delete %s?\u000AThis action cannot be undone.</string>
    <string name="import_error_unknown">Errors occurred during import.</string>
    <string name="import_error_file_not_found">Error: File not found</string>
    <string name="import_error_invalid_xml">Error: Invalid file formatting</string>
    <string name="import_error_exception">Import Error: %s</string>
    <string name="unable_to_load_file_msg">Unable to load file</string>
    <string name="export_character_dialog_title">Select Export Location</string>
    <string name="export_single_character_dialog_text">Please select a location to export the character to.</string>
    <string name="export_multiple_characters_dialog_text">Please select a location to export %s to.</string>
    <string name="export_character_location_default">Default</string>
    <string name="export_character_location_share">Share</string>
    <string name="character_exported_to_msg">Character exported to </string>
    <string name="error">Error: </string>
    <string name="export_intent_title">Export to</string>
    <string name="title_activity_ptdice_roller">Dice Roller</string>
    <string name="roller_mode_single">Single Roll</string>
    <string name="roller_mode_multi">XdY Roll</string>
    <string name="roller_mode_sum">Cumulative Rolls</string>
    <string name="roller_quantity_label">Quantity:</string>
    <string name="roller_die_label">Die:</string>
    <string name="roller_sum_label">Sum =</string>
    <string name="roller_roll_button">Roll</string>
    <string name="roller_reset_button">Reset</string>
    <string-array name="roller_die_types">
        <item>d4</item>
        <item>d6</item>
        <item>d8</item>
        <item>d10</item>
        <item>d12</item>
        <item>d20</item>
        <item>d%</item>
    </string-array>
    <string-array name="roller_die_quantities">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>
    <string-array name="abilities_short">
        <item>STR</item>
        <item>DEX</item>
        <item>CON</item>
        <item>INT</item>
        <item>WIS</item>
        <item>CHA</item>
    </string-array>
    <string name="max_dex_warning">\u26A0 max</string>
    <string name="select_ability_dialog_title">Select Ability</string>
    <string name="default_ability_label">\u0020(Default)</string>
    <string-array name="save_names">
        <item>Fortitude</item>
        <item>Reflex</item>
        <item>Will</item>
    </string-array>
    <string name="save_name_fort">Fortitude</string>
    <string name="save_name_ref">Reflex</string>
    <string name="save_name_will">Will</string>
    <string name="fluff_hint">Value</string>
    <string name="ability_name_str">STR</string>
    <string name="ability_name_dex">DEX</string>
    <string name="ability_name_con">CON</string>
    <string name="ability_name_int">INT</string>
    <string name="ability_name_wis">WIS</string>
    <string name="ability_name_cha">CHA</string>
    <string name="final_score">Final\nScore</string>
    <string name="racial_mod">Racial\nMod</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="ability">Ability</string>
    <string name="score">Score</string>
    <string name="modifier">Mod.</string>
    <string name="points">Points:</string>
    <string name="apply_armor_check">Apply Armor Check Penalty</string>
    <string name="skills_total_header">Total</string>
    <string name="skills_ability_mod_header">Ability Mod.</string>
    <string name="skills_rank_header">Rank</string>
    <string name="skills_misc_header">Misc Mod.</string>
    <string name="skills_class_skill_header">Class Skill</string>
    <string name="skills_filter_label">Show trained only</string>
    <string name="inventory_add_item_button">+</string>
    <string name="inventory_quantity_header">Qty.</string>
    <string name="inventory_name_header">Item Name</string>
    <string name="inventory_weight_header">Wt.</string>
    <string name="inventory_contained_header">Cont.</string>
    <string name="inventory_total_weight_header">Total Wt:</string>
    <string name="inventory_gold_header">gp:</string>
    <string name="inventory_gold_hint">Gold</string>
    <string name="armor_name_header">Name \u0020</string>
    <string name="armor_weight_header">Weight: \u0020</string>
    <string name="armor_size_header">Size: \u0020</string>
    <string name="armor_check_penalty_header">Armor Check Penalty: \u0020</string>
    <string name="armor_spell_failure_header">Spell Failure: \u0020</string>
    <string name="armor_special_properties_hint">Special Properties</string>
    <string name="armor_class_header">AC: \u0020</string>
    <string name="armor_speed">Speed: \u0020</string>
    <string name="armor_max_dex">Max Dex: \u0020</string>
    <string name="weapon_name_header">Name \u0020</string>
    <string name="weapon_weight_header">Weight: \u0020</string>
    <string name="weapon_size_header">Size: \u0020</string>
    <string name="weapon_critical_header">Critical: \u0020</string>
    <string name="weapon_range_header">Range: \u0020</string>
    <string name="Weapon_special_properties">Special Properties:\u0020</string>
    <string name="weapon_ammunition_header">Ammo: \u0020</string>
    <string name="weapon_damage_header">Damage: \u0020</string>
    <string name="weapon_highest_atk">Attack:\u0020</string>
    <string name="weapon_type_header">Type:\u0020</string>
    <string name="spellbook_level">Level</string>
    <string name="spellbook_prepared">Prepared</string>
    <string name="spellbook_description">Description</string>
    <string name="spell_name_header">Spell Name</string>
    <string name="menu_item_start_encounter">Start</string>
    <string name="menu_item_reset_encounter">Reset</string>
    <string name="menu_item_check_skill">Check Skill</string>
    <string name="menu_item_select_encounter">Encounters</string>
    <string name="menu_item_new_encounter">New Encounter</string>
    <string name="menu_item_add_participants">Add Participant</string>
    <string name="menu_item_delete_encounter">Delete Encounter</string>
    <string name="menu_item_fort_check">"Fort Save</string>
    <string name="menu_item_reflex_check">"Reflex Save</string>
    <string name="menu_item_will_check">"Will Save</string>
    <string name="menu_item_bluff_check">"Bluff</string>
    <string name="menu_item_disguise_check">"Disguise</string>
    <string name="menu_item_perception_check">"Perception</string>
    <string name="menu_item_sense_check">"Sense Motive</string>
    <string name="menu_item_stealth_check">"Stealth</string>
</resources>