<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item 
        android:id="@+id/mi_character_list"
        android:title="@string/menu_item_character_list"
           android:icon="@drawable/ic_action_people"
        android:showAsAction="ifRoom" />

    <item 
        android:id="@+id/mi_new_character"
        android:title="@string/menu_item_new_character"
        android:icon="@drawable/ic_action_new_person"
        android:showAsAction="ifRoom" />
    
    <item 
        android:id="@+id/mi_delete_character"
        android:title="@string/menu_item_delete_character"
        android:showAsAction="never" />

    <item
        android:id="@+id/mi_export_character"
        android:title="@string/menu_item_export_character"
        android:showAsAction="never" />

    <item
        android:id="@+id/mi_export_all"
        android:title="@string/menu_item_export_all"
        android:showAsAction="never" />

    <item
        android:id="@+id/mi_import_character"
        android:title="@string/menu_item_import_character"
        android:showAsAction="never" />
</menu>
