<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/armorName"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dialog_name_height"
        android:hint="@string/armor_name_header"
        />
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:text="@string/armor_class_header"/>
        
        <Spinner
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="fill_parent"
            android:id="@+id/spArmorClass"/>
            
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:text="@string/armor_size_header"/>
        
        <Spinner 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:id="@+id/spArmorSize"/>
        
        <TextView
            android:text="@string/armor_max_dex"
            android:layout_width="wrap_content"
            android:gravity="right|center_vertical"
            android:layout_height="match_parent"/>
        
        <Spinner
            android:id="@+id/spArmorMaxDex"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="match_parent"/>
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView 
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:gravity="right|center_vertical"
            android:text="@string/armor_speed"/>
        
        <Spinner 
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:id="@+id/spArmorSpeed"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="right|center_vertical"
            android:text="@string/armor_check_penalty_header"/>
        
        <Spinner
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.4"
            android:id="@+id/spArmorCheckPenalty"/>

    </LinearLayout>
        
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">    
        
        <TextView
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:gravity="right|center_vertical"
            android:text="@string/armor_spell_failure_header"/>
        
        <Spinner
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:id="@+id/spArmorSpellFailure"
            android:inputType="number"/>
        
        <TextView
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:gravity="right|center_vertical"
            android:text="@string/armor_weight_header"/>
        
        <EditText
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:id="@+id/etArmorWeight"
            android:inputType="number"/>
        
    </LinearLayout>
    
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etArmorSpecialProperties"
        android:hint="@string/armor_special_properties_hint"
        android:imeOptions="actionDone"/>

</LinearLayout>