<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:tag="skills_tag">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:weightSum="1" >
        
        <CheckBox 
            android:id="@+id/checkboxApplyACP"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left|center_vertical"
            android:text="@string/apply_armor_check"/>
        
        <CheckBox 
            android:id="@+id/checkboxFilterTrained"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left|center_vertical"
            android:text="@string/skills_filter_label"/>
         
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="6" >

        <TextView
            android:id="@+id/tvSkillsTotalHeader"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/skills_total_header" />

        <TextView
            android:id="@+id/tvSkillsAbilityHeader"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/skills_ability_mod_header" />

        <TextView
            android:id="@+id/tvSkillsRankHeader"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/skills_rank_header" />

        <TextView
            android:id="@+id/tvSkillsMiscHeader"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/skills_misc_header" />
        
        <TextView
            android:id="@+id/tvSkillsClassHeader"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/skills_class_skill_header" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#FF909090" />

    <ListView
        android:id="@+id/listViewCharacterSkills"
        style="@style/dividerless_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</LinearLayout>