<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/weaponDialogName"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dialog_name_height"
        android:hint="@string/weapon_name_header" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:text="@string/weapon_highest_atk"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="right|center_vertical"/>
        
        <Spinner
            android:id="@+id/weaponDialogHighestAtk"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.4"/>
        
        <TextView
            android:text="@string/weapon_ammunition_header"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="right|center_vertical"/>
        
        <Spinner
            android:id="@+id/weaponDialogAmmo"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.4"/>
        
    </LinearLayout>
    
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:text="@string/weapon_critical_header"
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:gravity="right|center_vertical"/>
        
        <EditText
            android:id="@+id/weaponDialogCrit"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.6"
            android:hint="@string/weapon_crit_hint"/>
        
        <TextView
            android:text="@string/weapon_type_header"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="right|center_vertical"/>
        
        <Spinner
            android:id="@+id/weaponDialogType"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.3"/>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:text="@string/weapon_damage_header"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="right|center_vertical"/>
        
        <EditText
            android:id="@+id/weaponDialogDamage"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.6"
            android:hint="@string/empty_string"/>
        
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/weapon_size_header"
            android:gravity="right|center_vertical"/>
        
        <Spinner 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:id="@+id/weaponDialogSize"/>
        
        
        
    </LinearLayout>

    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:text="@string/weapon_weight_header"
            android:gravity="right|center_vertical"/>
        
        <EditText
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:id="@+id/weaponDialogWeight"
            android:inputType="number"/>
        
        <TextView 
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:text="@string/weapon_range_header"
            android:gravity="right|center_vertical"/>
        
        <Spinner 
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:id="@+id/weaponDialogRange"/>
        
    </LinearLayout>
    
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <EditText
            android:id="@+id/weaponDialogSpecialProperties"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:hint="@string/Weapon_special_properties"
            android:imeOptions="actionDone"/>
        
    </LinearLayout>

</LinearLayout>