<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp" >

        <EditText
            android:id="@+id/etSpellName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/spell_name_header" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="left|center_vertical"
                    android:text="@string/spellbook_level" />

                <Spinner
                    android:id="@+id/spSpellLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="100dp" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="left|center_vertical"
                    android:text="@string/spellbook_prepared" />

                <Spinner
                    android:id="@+id/spSpellPrepared"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="100dp" />
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/etSpellDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/spellbook_description"
            android:imeOptions="normal" />
    </LinearLayout>

</ScrollView>
